--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "type": "git",
     "url": "git+https://github.com/ylabio/react-webinar-3.git"
   },
-  "author": "",
+  "author": "Alex",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/ylabio/react-webinar-3/issues"
